--- a/04_modeles.tex
+++ b/04_modeles.tex
@@ -281,7 +281,8 @@ Un exemple plus complexe est le célèbre problème du passeur. Celui ci doit tr
 La figure \ref{Salade} illustre le diagramme d'état de cette énigme.
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.4\textwidth]{Images/567px-ChevreLoupSalade.jpg}
+        % Ne pas utiliser le fichier Images/567px-ChevreLoupSalade.jpg car travis n'arrive pas à builder avec cette version
+	\includegraphics[width=0.4\textwidth]{Images/ChevreLoupSalade.jpg}
 	\caption{Diagramme d'état du passeur \\{\footnotesize Par ManiacParisien — Travail personnel, CC BY-SA 4.0, https://commons.wikimedia.org/w/index.php?curid=47815891}}
 	\label{Salade}
 \end{figure}
