Correction: ch03 Rice theorem
Otherwise there are properties of the programs themselves that _can_ be decided.

--- a/03_ResultatsFondamentaux.tex
+++ b/03_ResultatsFondamentaux.tex
@@ -749,7 +749,7 @@ else print(0);
 		et qu'elle est décidable, \textbf{alors} il existe deux programmes calculant la
 		même fonction, mais l'un vérifie la propriété, et l'autre pas.
 
-	\item \textbf{Si} la propriété est vérifiée par un programme, mais pas tous,
+	\item \textbf{Si} une propriété de la fonction calculée par un programme est vérifiée par un programme, mais pas tous,
 		\textbf{alors} cette propriété ne peut-être décidée par un algorithme.
 
 	\item \textbf{S}'il existe un algorithme permettant de déterminer si un
