--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -232,4 +232,8 @@ version={4.0},
 \newtheorem{myhyp}{Hypothèse}[chapter]
 \newtheorem{mythese}[mydef]{Thèse}
 
+% Debug warnings - à commenter si on veut tout vérifier
+\overfullrule=100pt
+\hbadness=10000
+
 \endinput
