Ajout schéma & fix problèmes d'affichage

--- a/07_ClassesComplexite.tex
+++ b/07_ClassesComplexite.tex
@@ -334,9 +334,11 @@ introduit donc une nouvelle réduction, la réduction polynomiale.
 	$NP$.
 \end{myprop}
 
-TODO schéma sur les classes de problèmes
+\begin{center}
+	\includegraphics[scale=0.6]{Images/classes_problemes.png}
+\end{center}
 
-\paragraph{} On va maintenant essayer de trouver des problèmes $NP$-complets et de
+\paragraph{} Nous allons désormais essayer de trouver des problèmes $NP$-complets et de
 trouver des propriétés intéressantes sur $P$.
 
 \subsection{Problème de décision}
