--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -461,6 +461,10 @@ les techniques suivantes pourront être utilisées
 	\item utiliser la diagonalisation (cf. Cantor)
 \end{itemize}
 
+\begin{myexercice}\label{exerc:conceptfct}
+L'ensemble des fonctions de $\N$ vers $\{0,1\}$ est-il énumérable ?
+\end{myexercice}
+
 % subsection cantor (end)
 
 \subsection{Au delà de l'énumérable}
@@ -493,3 +497,4 @@ Les ensembles énumérables sont importants pour la suite du cours. En
 informatique, on ne considère que les ensembles énumérables. En effet, on constate que l'univers des programmes (Java ou autres) est énumérable (voir propriété \ref{prop:programme_enumerable}), alors que l'univers des problèmes (fonction de $\N$ dans $\N$) est non-énumérables (voir exemple \ref{exem:fNN}).
 On ne peut donc forcément pas faire correspondre un programme à chaque problème et on en conclut donc qu'un grand nombre de problèmes ne sont pas calculables.
 % section concepts (end)
+
