--- a/05_Analyse.tex
+++ b/05_Analyse.tex
@@ -132,7 +132,7 @@ Pour prouver qu'un problème est non calculable, on peut utiliser :
 % section Techniques de preuve (end)
 
 % section Aspect non couverts par la calculabilité (start)
-\section{Aspects non couverts par la calculabilité\protect\footnote{section pas très importante pour l'examen}}
+\section{Aspects non couverts par la calculabilité}
 \label{sub:aspects_non_couvert_par_la_calculabilit_}
 La calculabilité se limite au calcul de fonctions. Or certains problèmes de la vie de tous les jours ne correspondent pas à une fonction.
 
