--- a/calculabilite_INGI1123.tex
+++ b/calculabilite_INGI1123.tex
@@ -28,6 +28,8 @@
 
 \input{07_ClassesComplexite}
 
+\input{88_SolutionsExercices}
+
 %==========================================
 
  \bibliographystyle{plain}
