--- a/ingi1123.sty
+++ b/ingi1123.sty
@@ -229,9 +229,12 @@ version={4.0},
 \newcommand{\fdif}[2]{\frac{\dif #1}{\dif #2}}
 \newcommand{\ffdif}[2]{\frac{\dif^2 #1}{\dif #2^2}}
 
+\newcommand{\solexercice}[1]{\noindent{\bf Exercice \ref{#1}.}\newline}
+
 \newtheorem{mydef}{Définition}[chapter]
 \newtheorem{mynota}[mydef]{Notation}
-\newtheorem{myprop}[mydef]{Propriétés}
+\newtheorem{myprop}[mydef]{Propriété}
+\newtheorem{myexercice}[mydef]{Exercice}
 \newtheorem{myrem}[mydef]{Remarque}
 \newtheorem{myform}[mydef]{Formules}
 \newtheorem{mycorr}[mydef]{Corollaire}
