[02_Concepts] Fix typos and formatting

--- a/00_Preambule.tex
+++ b/00_Preambule.tex
@@ -3,13 +3,10 @@
 
 Ce document est un syllabus collaboratif pour le cours \emph{INGI1123 Calculabilité et complexité}  donné à l'Université catholique de Louvain par Yves Deville.  Ces notes sont en cours d'élaboration et sont le fruit d'un travail collaboratif entre les étudiants de ce cours, avec une supervision de Yves Deville et différents chercheurs et assistants.
 
-Ce syllabus est sous licence Creative Commons CC-BY-SA.  Les étudiants sont encouragés à participer à l'élaboration de ce syllabus.  
+Ce syllabus est sous licence Creative Commons CC-BY-SA.  Les étudiants sont encouragés à participer à l'élaboration de ce syllabus.
 
-Ce document se base sur la \emph{Synthèse de Calculabilité Q6 - LINGI1123}, produite notamment par Floran Hachez, Lionel Nobel Lena Peschke et François Robinet lorsqu'ils ont suivi ce cours.  Cette synthèse a été rédigée sous licence Creative Commons CC-BY-SA et est disponible à l’adresse suivante
+Ce document se base sur la \emph{Synthèse de Calculabilité Q6 - LINGI1123}, produite notamment par Floran Hachez, Lionel Nobel, Lena Peschke et François Robinet lorsqu'ils ont suivi ce cours.  Cette synthèse a été rédigée sous licence Creative Commons CC-BY-SA et est disponible à l’adresse suivante
 \url{https://github.com/Gp2mv3/Syntheses}
 
 Ces notes contiennent certainement des erreurs.  Soyez vigilants.  Vos contributions sont les bienvenues pour améliorer et corriger ces notes à l'adresse suivante
 \url{https://github.com/UCL-INGI/LINGI1123-Calculabilite}
-
-
-
