--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -9,12 +9,12 @@
 
 \subsection{Ensembles}
 \label{subsec:ensembles}
-Un ensemble est une collection d'objets, sans répétition, appelés les éléments
-de l'ensemble.
+Un \emph{ensemble} est une collection d'objets, sans répétition,
+appelés les éléments de l'ensemble.
 \paragraph{Notations}
 
 \begin{description}
-	\item [Ensemble vide :] $\phi$
+	\item [Ensemble vide :] $\emptyset$
 	\item [Ensemble fini :] $\{ 0, 1, 2\}$, $\{00, 01, 10, 11\}$
 	\item [Ensemble infini :] $\{ 0, 1, 2, 3, 4,\, \ldots\,\}$, $\{0, 1, -1, 2, -2, 3, -3, \, \ldots\,\}$,
 	\subitem $\{a, aa, aaa, aaaa,\, \ldots\,\}$, $\{a, b, aa, ab, ba, bb, aaa, aab, \, \ldots\,\}$
@@ -31,7 +31,7 @@ de l'ensemble.
 \label{subsec:Langages}
 Notations :
 \begin{itemize}
-    \item Une \emph{chaîne de caractères} ou un \emph{mot} est séquence \textbf{\underline{finie}} de \emph{symboles} (ou \emph{caractères}).
+    \item Une \emph{chaîne de caractères} ou un \emph{mot} est une séquence \textbf{\underline{finie}} de \emph{symboles} (ou \emph{caractères}).
 
     Par exemple :
     	\begin{itemize}
@@ -77,7 +77,7 @@ Soient $A$, $B$ des ensembles.
 	A$, il existe au plus un $b \in B$ tel que $\langle a,b \rangle \in f$.
 	\item Écrire $f(a)=b$ est équivalent à $\langle a,b \rangle \in f$.
 	\item S'il n'existe pas de $b \in B$ tel que $f(a)=b$ alors $f(a)$ est indéfini,
-		$f(a) = \perp$.  Le symbole $\perp$ est appelé \emph{bottom}.
+		$f(a) = \perp$. Le symbole $\perp$ est appelé \emph{bottom}.
 \end{itemize}
 
 \subsubsection{Propriétés des fonctions}
@@ -92,44 +92,44 @@ Si $\dom(f) \subseteq A$, alors $f$ est appelée \emph{partielle} et si $\dom(f)
 Notez qu'avec cette définition, une fonction totale est partielle.
 Pour dire que $\dom(f) \subset A$, il faut dire que $f$ n'est pas totale.
 
-Une fonction est \emph{surjective} si $\image(f) = B$ et \emph{injective} si $\forall a,a' \in A : a \neq a' \Rightarrow f(a) \neq f(a')$.
+Une fonction est \emph{surjective} si $\image(f) = B$ et \emph{injective} si $\forall a,a' \in A : a \neq a' \implies f(a) \neq f(a')$.
 
 Une fonction est \emph{bijective} si elle est totale, injective et surjective.
 
 On utilise aussi le concept d'\emph{extension} :
-$f: A \rightarrow B$ est une extension de $g: A \rightarrow B$ si $\forall x \in A : g(x)\neq \perp \Rightarrow f(x) = g(x)$.
+$f \colon A \rightarrow B$ est une extension de $g \colon A \rightarrow B$ si $\forall x \in A : g(x)\neq \perp \implies f(x) = g(x)$.
 Autrement dit, $f$ a la même valeur que $g$ partout où $g$ est définie.
 
-La fonction $\mathrm{sqrt}(x) = \sqrt{x}$ en mathématique n'est valable que pour $x\geq0$. En revanche un programme implémentant cette fonction, par exemple $\mathrm{mysqrt}(x) = \sqrt{x}$, retourne une valeur si $x\geq0$ ou \textit{Erreur} sinon. $\mathrm{mysqrt}(x)$ est une extension de la fonction $\mathrm{sqrt}(x)$ de base.
+La fonction $\mathrm{sqrt}(x) = \sqrt{x}$ en mathématique n'est valable que pour $x\geq0$. En revanche, un programme implémentant cette fonction, par exemple $\mathrm{mysqrt}(x) = \sqrt{x}$, retourne une valeur si $x\geq0$ ou \textit{Erreur} sinon. $\mathrm{mysqrt}(x)$ est une extension de la fonction $\mathrm{sqrt}(x)$ de base.
 
 \subsubsection{Définition d'une fonction}
 \label{par:d_finition_d_une_fonciton}
 On définit une fonction par sa table qui peut être infinie.\\
-On peut définir la table de plusieurs façons :
+On peut définir (la table d') une fonction de plusieurs façons :
 \begin{itemize}
 	\item Par \emph{un texte fini} déterminant sans contradiction ni ambiguïté le contenu
 		de la table.
 	\item Par un algorithme. Dans ce cas elle détermine la fonction \textit{ainsi} qu'un moyen de la calculer.
 		\subitem Ex: $f(x) = 2x^3+5$
-	\item Écrire toutes les paires de la relation.
+	\item En écrivant toutes les paires de la relation.
 \end{itemize}
 Il n'est toutefois pas nécessaire de décrire ou de connaître un moyen de la calculer
 pour pouvoir la définir sans ambiguïté ni contradiction.
 
-Ex : $f(x) = \left\{\begin{array}{ll} 1 & \text{s'il y a de la vie autre part que sur terre,} \\ 0 & \text{sinon.}\end{array}\right.$\\(en supposant qu'il n'y ait pas d'ambiguïté sur le terme ``vie'').\\
+Ex : $f(x) = \left\{\begin{array}{ll} 1 & \text{s'il y a de la vie autre part que sur terre,} \\ 0 & \text{sinon.}\end{array}\right.$\\(en supposant qu'il n'y ait pas d'ambiguïté sur le terme \og vie\fg).\\
 % paragraph d_finition_d_une_fonction (end)
 % subsection fonctions (end)
 % section ensembles_langages_relations_et_fonctions (end)
 
 \section{Ensemble énumérable}
 \label{sec:ensemble_num_rables}
-Quel est la taille d'un ensemble ?  Comment comparer la taille d'ensembles infinis ?
+Quelle est la taille d'un ensemble ?  Comment comparer la taille d'ensembles infinis ?
 
 Avant de dire ce qu'est un ensemble énumérable, on doit savoir que deux ensembles
 ont le même cardinal s'il existe une bijection entre eux.
 
 \begin{mydef}[Ensemble énumérable]
-	Un ensemble est énumérable ou dénombrable s'il est fini ou s'il a le même cardinal que $\N$.
+	Un ensemble est \emph{énumérable} ou \emph{dénombrable} s'il est fini ou s'il a le même cardinal que $\N$.
 \end{mydef}
 Une autre manière plus intuitive de voir si un ensemble infini est énumérable est de voir s'il existe une énumération de ses éléments.
 
@@ -147,7 +147,7 @@ Cette liste doit contenir tous les éléments de cet ensemble, sans répétition
 \begin{myexem}
   L'ensemble des entiers $\mathit{\Z=\{0,-1,1,2,-2,\ldots\}}$.
   \begin{proof}
-     On peut avoir une bijection entre $\Z$ et $\N$ , ils peuvent être énumérés et on peut donner un numéro pour chaque élément, il existe donc une énumération.
+     On peut avoir une bijection entre $\Z$ et $\N$, ils peuvent être énumérés et on peut donner un numéro pour chaque élément, il existe donc une énumération.
 
   \begin{tabular}{ l | c c c c c c c r }
      $\N$ & 0 & 1 & 2  & 3 & 4 & 5 & 6 & \ldots \\
@@ -160,7 +160,7 @@ Cette liste doit contenir tous les éléments de cet ensemble, sans répétition
 \begin{myexem}
  L'ensemble des nombres pairs.
   \begin{proof}
-  Le principe reste le même: on peut établir une bijection entre l'ensemble des nombres paires et $\N$.
+  Le principe reste le même: on peut établir une bijection entre l'ensemble des nombres pairs et $\N$.
 
    \begin{tabular}{ l c c c c c c c r }
     $\N$ & 0 & 1 & 2  & 3 & 4 & 5 & 6 & \ldots \\
@@ -173,7 +173,7 @@ Cette liste doit contenir tous les éléments de cet ensemble, sans répétition
 \label{exem:paire_entiers}
   L'ensemble des paires d'entiers, des triplets, \ldots
     \begin{proof}
-        Il existe une énumération, il existe une bijection comme celui-ci
+        Il existe une énumération, il existe une bijection comme celle-ci:
 
 		\begin{tabular}{ l c c  c  c c c  r }
 			$\N$  & 0 & 1 & 2  & 3 & 4 & 5 & \ldots  \\
@@ -190,14 +190,14 @@ Cette liste doit contenir tous les éléments de cet ensemble, sans répétition
 \begin{myexem}
  Les rationnels, même s'ils ont une représentation décimale infinie, peuvent être représentés de manière finie en fraction d'entiers.
 	 \begin{proof}
-	 	 Comme tout rationnel peut s'écrire sous la forme d'un numérateur et d'un dénominateur, un rationnel est équivalent à une paire d'entier (cette équivalence est univoque en prenant un numérateur et un dénominateur premiers entre eux, un dénominateur toujours positif et la paire $(0,1)$ pour le nombre $0$). On peut donc faire une démonstration similaire à celle des paires d'entiers pour prouver que les rationnels sont en bijection avec l'ensemble $\N$ (quitte à ne pas prendre certaines paires qui ne correspondent pas à un rationnel).
+	 	 Comme tout rationnel peut s'écrire sous la forme d'un numérateur et d'un dénominateur, un rationnel est équivalent à une paire d'entiers (cette équivalence est univoque en prenant un numérateur et un dénominateur premiers entre eux, un dénominateur toujours positif et la paire $(0,1)$ pour le nombre $0$). On peut donc faire une démonstration similaire à celle des paires d'entiers pour prouver que les rationnels sont en bijection avec l'ensemble $\N$ (quitte à ne pas prendre certaines paires qui ne correspondent pas à un rationnel).
 	 \end{proof}
  \end{myexem}
 
 \begin{myexem}
   L'ensemble des sous-ensembles finis d'entiers.
   \begin{proof}
-  Par l'exemple \ref{exem:paire_entiers}, les ensembles de sous-ensembles de taille 2, 3, 4, 5, \dots sont tous énumérables. On peut alors créer un tableau reprenant tous les sous-ensembles finis possibles et dans lequel la ligne $n$ comprend tous les sous-ensembles de taille $n$. Ces ensembles sont en bijection avec les naturels ($\N$).
+  Par l'exemple~\ref{exem:paire_entiers}, les ensembles des sous-ensembles de tailles 2, 3, 4, 5,\dots sont tous énumérables. On peut alors créer un tableau reprenant tous les sous-ensembles finis possibles et dans lequel la ligne $n$ comprend tous les sous-ensembles de taille $n$. Ces ensembles sont en bijection avec les naturels ($\N$).
 
     \begin{tabular}{ l c c  c  c c c  c }
  	 $\N$ & 0 & 1 & 2  & 3 & 4 & 5 & 6  \\
@@ -229,7 +229,7 @@ Cette liste doit contenir tous les éléments de cet ensemble, sans répétition
  \label{exem:programme_java}
   L'ensemble des programmes Java.
   \begin{proof}
-   Un programme Java est une séquence finie d'un alphabet fini (ASCII étendu). Donc potentiellement autant qu'il y a de naturels, ni plus ni moins, ce qui nous donne une bijection entre programmes et $\N$.
+   Un programme Java est une séquence finie d'un alphabet fini (ASCII étendu). Donc il y a potentiellement autant de programmes qu'il y a de naturels, ni plus ni moins, ce qui nous donne une bijection entre les programmes et $\N$.
   \end{proof}
 \end{myexem}
 
@@ -239,18 +239,18 @@ Cette liste doit contenir tous les éléments de cet ensemble, sans répétition
 \begin{myprop}
 	Tout sous-ensemble d'un ensemble énumérable est énumérable.
 	\begin{proof}
-Soit $A$ un sous-ensemble (infini) d'un ensemble $E$ énumérable.  Comme $E$ est énumérable, il existe une énumération de ses éléments
+Soit $A$ un sous-ensemble (infini) d'un ensemble $E$ énumérable. Comme $E$ est énumérable, il existe une énumération de ses éléments
 \[
 e_0, e_1, \ldots , e_n, \ldots
 \]
-Enlevons de cette liste les éléments qui ne sont pas dans $A$.  On obtient une nouvelle liste qui énumère les éléments de $A$.
+Enlevons de cette liste les éléments qui ne sont pas dans $A$. On obtient une nouvelle liste qui énumère les éléments de $A$.
 	\end{proof}
 \end{myprop}
 
 \begin{myprop}
 	L'union et l'intersection de deux ensembles énumérables sont énumérables.
 	\begin{proof}
-		Soit $A$ et $B$ deux ensembles énumérables infinis (le cas fini étant trivial).  Leur intersection est énumérable car elle est un sous-ensemble de $A$, par la propriété précédente.   Les éléments des ensembles $A$ et $B$ peuvent être listés
+		Soient $A$ et $B$ deux ensembles énumérables infinis (le cas fini étant trivial). Leur intersection est énumérable car elle est un sous-ensemble de $A$, par la propriété précédente. Les éléments des ensembles $A$ et $B$ peuvent être listés
 \[
 A = \{ a_0, a_1, \ldots , a_n, \ldots\}  \quad
 B = \{ b_0, b_1, \ldots , b_n, \ldots\}
@@ -259,7 +259,7 @@ Les éléments de $A \cup B$ peuvent être également listés
 \[
 a_0, b_0, a_1, b_1, \ldots, a_n, b_n, \ldots
 \]
-en y retirant ensuite les doublons. Donc $A \cup B$ est énumérable.
+en y retirant ensuite les doublons. Donc, $A \cup B$ est énumérable.
 	\end{proof}
 \end{myprop}
 
@@ -267,21 +267,22 @@ en y retirant ensuite les doublons. Donc $A \cup B$ est énumérable.
 	L'union d'une infinité énumérable d'ensembles énumérables est énumérable.
     \begin{proof}
       La démonstration est similaire à la démonstration de l'énumérabilité de $\Q$.
-      On met chaque ensemble en ligne, il y a un nombre énumérable de lignes qu'on peut numéroter en parcourant le tableau en diagonale montante en partant de $(0,0)$.
+      On met chaque ensemble en ligne. Il y a un nombre énumérable de lignes qu'on peut numéroter par des naturels.
+      On énumère l'union des ensembles en parcourant le tableau en diagonale montante en partant de $(0,0)$.
     \end{proof}
 \end{myprop}
 
 \begin{myprop}
  Tout ensemble de chaînes finies de caractères sur un alphabet fini est énumérable.
  \begin{proof}
-C'est un sous-ensemble de l'ensemble de toutes les chaînes finies de caractères, qui est énumérable par l'exemple \ref{exem:chaines_finies}.
+C'est un sous-ensemble de l'ensemble de toutes les chaînes finies de caractères, qui est énumérable par l'exemple~\ref{exem:chaines_finies}.
  \end{proof}
 \end{myprop}
 
 \begin{myprop} \label{prop:programme_enumerable}
  L'ensemble des programmes Java est énumérable.
  \begin{proof}
-  Voir exemple \ref{exem:programme_java}.
+  Voir exemple~\ref{exem:programme_java}.
  \end{proof}
 \end{myprop}
 
@@ -289,33 +290,38 @@ C'est un sous-ensemble de l'ensemble de toutes les chaînes finies de caractère
 \begin{myprop}
  Tout langage (avec un alphabet fini) est énumérable.
  \begin{proof}
- Un langage est un ensemble de chaînes finies de caractères d'un alphabet fini.  Il est donc  énumérable.
+ Un langage est un ensemble de chaînes finies de caractères d'un alphabet fini. Il est donc énumérable.
  \end{proof}
 \end{myprop}
 
-L'union d'une infinité non-énumérable d'ensembles énumérables peut ne pas être énumérable.
+\begin{myprop}
+L'union d'une infinité non énumérable d'ensembles énumérables peut ne pas être énumérable.
+\end{myprop}
+\begin{proof}
 Par exemple, l'union des singletons $\{x\}$ pour tout réel $x$ forme l'ensemble des réels $\R$ qui n'est pas énumérable:
 \[ \bigcup_{x \in \R} \{x\} = \R. \]
+C'est un contre-exemple.
+\end{proof}
 
 \begin{myrem}
   Une bonne intuition à avoir:
-  Tout ensemble dont les éléments peuvent être représentés de manière finie est énumérable.
+  tout ensemble dont les éléments peuvent être représentés de manière finie est énumérable.
 \end{myrem}
 
 Dans le cours, lorsqu'on devra montrer qu'un ensemble est énumérable,
 les techniques suivantes pourront être utilisées:
 \begin{itemize}
-	\item montrer qu'il y a une bijection avec $\N$
-	\item montrer que l'ensemble est fini
-	\item écrire un programme qui énumère l'ensemble
-	\item utiliser une des propriétés ci-dessus
+	\item montrer qu'il y a une bijection avec $\N$;
+	\item montrer que l'ensemble est fini;
+	\item écrire un programme qui énumère l'ensemble;
+	\item utiliser une des propriétés ci-dessus.
 \end{itemize}
 
 % subsection ensemble_num_rables (end)
 
 \section{Cantor}
 \label{sec:cantor}
-On va montrer qu'il existe des ensembles non énumérables par diagonalisation. Par exemple $\R$.
+On va montrer qu'il existe des ensembles non énumérables par diagonalisation. Par exemple, l'ensemble des réels, $\R$.
 \begin{myexem}
 	Exemple de démonstration par diagonalisation:
 	\begin{enumerate}
@@ -329,18 +335,16 @@ On va montrer qu'il existe des ensembles non énumérables par diagonalisation. 
 				W&E&I&E&R&\emph{\textbf{S}}&T&R&A&S&S\\
 			\end{tabular}
 		\item Sélectionner la diagonale : $\diag = $ DBOUPS
-		\item Modifier l'élément égal à la diagonale : $\diag' =$ CANTOR
-		\item Montrer que l'élément n'est pas dans la liste $\Rightarrow$ Contradiction
+		\item Modifier l'élément égal à la diagonale : $\diag' =$ CANTOR (prendre à chaque fois la lettre précédente dans l'alphabet)
+		\item Montrer que l'élément n'est pas dans la liste $\implies$ Contradiction
 		\item Conclusion :
 			\begin{itemize}
 				\item Soit on sait que la liste est complète
-					\subitem $ \Rightarrow$ CANTOR n'est pas un grand
-				mathématicien (cas utilisé pour démontrer
-				halt).
+					\subitem $ \implies$ CANTOR n'est pas un grand
+					mathématicien (cas utilisé pour démontrer halt).
 				\item Soit on sait que CANTOR est un grand
 					mathématicien
-					\subitem $ \Rightarrow$ la liste est incomplète
-				(cas utilisé pour la diagonalisation de CANTOR)
+					\subitem $ \implies$ la liste est incomplète (cas utilisé pour la diagonalisation de CANTOR)
 			\end{itemize}
 	\end{enumerate}
 \end{myexem}
@@ -377,9 +381,9 @@ On va montrer qu'il existe des ensembles non énumérables par diagonalisation. 
 				\[ d'=0.x_{00}'x_{11}'\dots x_{kk}'\dots \]
 				Où
                 $$x_{ii}'=5\text{ si }x_{ii}\neq 5\quad\text{et}\quad x_{ii}'=6\text{ si }x_{ii}= 5$$
-				On a toujours que cet élément $d'$ est un réel compris entre 0 et 1\footnote{De plus, puisqu'il ne contient que des $5$ et des $6$ il n'a qu'une écriture décimale, donc notre choix quant à l'écriture décimale n'a pas d'influence est il appartient forcément au tableau.}.
+				On a toujours que cet élément $d'$ est un réel compris entre 0 et 1\footnote{De plus, puisqu'il ne contient que des $5$ et des $6$ il n'a qu'une écriture décimale, donc notre choix quant à l'écriture décimale n'a pas d'influence et il appartient forcément au tableau.}.
 			\item Le nombre $d'$ est dans l'énumération, car $E$ est
-				énumérable (par hypothèse). Il existe donc $x_p=d'$,
+				énumérable (par hypothèse). Il existe donc $p$ tel que $x_p=d'$,
 				\[ x_p=0.x_{p0}x_{p1}\dots x_{pp}\dots \]
 				\[=\]
 				\[ d'=0.x_{00}'x_{11}'\dots x_{pp}'\dots \]
@@ -427,7 +431,7 @@ Quelques ensembles non énumérables :
 \end{myexem}
 
 \begin{myexem}
- L'ensemble des chaînes infinies de caractère sur un alphabet fini.
+ L'ensemble des chaînes infinies de caractères sur un alphabet fini.
  \begin{proof}
    On utilise le même raisonnement que pour les sous-ensembles de $\N$ sauf que pour un alphabet de $k$ symboles,
    on utilise la représentation en base $k$ des réels.
@@ -436,7 +440,7 @@ Quelques ensembles non énumérables :
 
 \begin{myexem}
   \label{exem:fNN}
- L'ensemble des fonctions de $\N$ dans $\N$ (Cas important).
+ L'ensemble des fonctions de $\N$ dans $\N$ (Cas important) et de $\N$ dans $\{0, 1\}$.
  \begin{proof}
    Si c'était énumérable, soit $f_0, f_1, f_2, \ldots$ leur dénombrement.
    On construit le tableau
@@ -457,7 +461,7 @@ Quelques ensembles non énumérables :
 Dans le cours, lorsqu'on devra montrer qu'un ensemble est non énumérable,
 les techniques suivantes pourront être utilisées
 \begin{itemize}
-	\item montrer qu'il y a une bijection avec  $\R$
+	\item montrer qu'il y a une bijection avec $\R$
 	\item utiliser la diagonalisation (cf. Cantor)
 \end{itemize}
 
@@ -467,19 +471,19 @@ les techniques suivantes pourront être utilisées
 \label{subsec:au_dela_de_l_enumerable}
 On a d'abord parlé d'ensembles finis, ensuite nous avons introduit le concept d'infini
 énumérable qui est plus grand que tous les ensembles finis. Mais il existe plus grand
-que l'infini énumérable.   L'ensemble des réels $\R$, l'ensemble des fonctions de $\N$ dans $\N$, ainsi que
-l'ensemble des sous-ensemble de $\N$ ($2^{\N}$) sont non énumérables et ont la même taille.  Ils ont la puissance du continu.
+que l'infini énumérable. L'ensemble des réels $\R$, l'ensemble des fonctions de $\N$ dans $\N$, ainsi que
+l'ensemble des sous-ensemble de $\N$ ($2^{\N}$) sont non énumérables et ont la même taille. Ils ont la puissance du continu.
 
-Peut-on encore aller plus loin?  Oui,  il suffit de considérer  l'ensemble des fonctions de $\R$ dans $\R$, ainsi que
-l'ensemble des sous-ensemble de $\R$ ($2^{\R}$).  Ces ensembles ne peuvent pas être mis en bijection avec $\R$.
+Peut-on encore aller plus loin?  Oui, il suffit de considérer l'ensemble des fonctions de $\R$ dans $\R$, ainsi que
+l'ensemble des sous-ensembles de $\R$ ($2^{\R}$). Ces ensembles ne peuvent pas être mis en bijection avec $\R$.
 
-Encore plus loin ?  Oui, en prenant l'ensemble des sous-ensembles de l'ensemble défini juste avant (on peut montrer que pour tout ensemble $E$, $|E|<|\mathcal{P}(E)|=2^{|E|}$) .  On obtient alors $2^{2^{\R}}$.  Et ainsi de suite\ldots
+Encore plus loin ? Oui, en prenant l'ensemble des sous-ensembles de l'ensemble défini juste avant (on peut montrer que pour tout ensemble $E$, $|E|<|\mathcal{P}(E)|=2^{|E|}$). On obtient alors $2^{2^{\R}}$, et ainsi de suite\ldots
 
 On peut ainsi schématiser la taille des ensembles comme ceci:
 $$|\emptyset| < |\{1,2,3\}| < |\N| < |2^\N| = |\R| < |2^{\R}| < |2^{2^{\R}}| < |2^{2^{2^{\R}}}| \dots$$
 Est-ce qu'il existe encore plus grand? Oui, effectivement, l'union de tous ces ensembles
 est plus grand que chacun de ces ensembles\footnote{
-Pour aller plus loin : en théorie des ensembles ZFC, cette construction s'écrit avec la lettre $\beth$ (prononcé \textbf{beth}), tel que $\beth_0 = \N, \beth_1 = 2^\N = \R,\dots$. L'union de tous ces ensembles est plus grand que chacun d'eux, et se note $\beth_\N$. On peut continuer la construction à partir de là, et obtenir des ensembles encore plus grand.
+Pour aller plus loin : en théorie des ensembles ZFC, cette construction s'écrit avec la lettre $\beth$ (prononcé \textbf{beth}), telle que $\beth_0 = \N, \beth_1 = 2^\N = \R,\dots$. L'union de tous ces ensembles est plus grande que chacun d'eux, et se note $\beth_\N$. On peut continuer la construction à partir de là, et obtenir des ensembles encore plus grands.
 
 Par ailleurs, l'ensemble de \emph{tous} les cardinaux est noté avec la lettre $\aleph$ (prononcé \textbf{aleph}), avec $\aleph_0 = \abs{\N}$. On pourrait être tenté de prendre l'ensemble de tous les cardinaux pour avoir un ensemble encore plus grand. Mais ce ne serait plus un ensemble (c'est une classe dans la théorie des ensembles NBG) !
 
@@ -490,6 +494,6 @@ Finalement, l'hypothèse du continu stipule que $\beth_1 = \aleph_1$, c'est-à-d
 \label{sec:concept_conclusion}
 
 Les ensembles énumérables sont importants pour la suite du cours. En
-informatique, on ne considère que les ensembles énumérables. En effet, on constate que l'univers des programmes (Java ou autres) est énumérable (voir propriété \ref{prop:programme_enumerable}), alors que l'univers des problèmes (fonction de $\N$ dans $\N$) est non-énumérables (voir exemple \ref{exem:fNN}).
+informatique, on ne considère que les ensembles énumérables. En effet, on constate que l'univers des programmes (Java ou autres) est énumérable (voir propriété \ref{prop:programme_enumerable}), alors que l'univers des problèmes (fonctions de $\N$ dans $\N$) est non énumérable (voir exemple \ref{exem:fNN}).
 On ne peut donc forcément pas faire correspondre un programme à chaque problème et on en conclut donc qu'un grand nombre de problèmes ne sont pas calculables.
 % section concepts (end)
